Reword "respectability politics" line to use different wording

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: no-style
 				<h2>Web designer, specializing in from-scratch personal website design & project-oriented websites.</h2>
 			</div>
 			<div class="home-subhed__two">
-				<h2>Let's explore what aesthetics can do when we leave respectability politics behind.</h2>
+				<h2>Let's explore what beautiful websites can do for the world when we value aesthetics.</h2>
 			</div>
 			<div class="home-subhed__three">
 				<h2>Things to do here:</h2>
