Add line breaks for page 2 content

--- a/pages/fake/new-home.html
+++ b/pages/fake/new-home.html
@@ -18,13 +18,13 @@ permalink: /new-home/
 	<h1 class="nh-p2__title">What suits your needs?</h1>
 	<article class="nh-p2__options">
 		<section class="nh-options__option-1">
-			<h3 class="nh-options__text">Ground up (re)design</h3>
+			<h3 class="nh-options__text">Ground up<br/>(re)design</h3>
 		</section>
 		<section class="nh-options__option-2">
-			<h3 class="nh-options__text">Just a few tweaks, please</h3>
+			<h3 class="nh-options__text">Just a few<br/>tweaks, please</h3>
 		</section>
 		<section class="nh-options__option-3">
-			<h3 class="nh-options__text">I'm not sure yet!</h3>
+			<h3 class="nh-options__text">I'm not sure<br/>yet!</h3>
 		</section>
 	</article>
 </main>
