Add rough styles for first page of homepage

--- a/pages/fake/new-home.html
+++ b/pages/fake/new-home.html
@@ -9,8 +9,10 @@ permalink: /new-home/
 
 <!-- first page of content -->
 <main class="nh__page1">
-	<h1 class="nh-p1__name">Katherine Donnally</h1>
-	<h1 class="nh-p1__title">Web Designer</h1>
+	<main class="nh-p1__content-wrapper">
+		<h1 class="nh-p1__name">Katherine Donnally</h1>
+		<h1 class="nh-p1__title">Web Designer</h1>
+	</main>
 </main>
 
 <!-- second page of content -->
