Move dividers outside of project wrapper

--- a/pages/fake/new-portfolio.html
+++ b/pages/fake/new-portfolio.html
@@ -60,13 +60,13 @@ permalink: /new-portfolio/
 				<h4 class="portfolio-meta__sponsor">{{ project.sponsor }}, {{ project.date }}</h4>
 				<h4 class="portfolio-meta__note">// Click images to enlarge.</h4>
 			</section>
+		</section> <!-- end project -->
 
-			<!-- divider -->
-			<section class="portfolio-proj__divider">
-				<div class="portfolio-divider__line--left"></div>
-				<div class="portfolio-divider__line--right"></div>
-				<div class="portfolio-divider__line--left"></div>
-			</section>
+		<!-- divider -->
+		<section class="portfolio-proj__divider">
+			<div class="portfolio-divider__line--left"></div>
+			<div class="portfolio-divider__line--right"></div>
+			<div class="portfolio-divider__line--left"></div>
 		</section>
 		{% endfor %}
 	</article>
