Add URLs to project titles

--- a/pages/fake/new-portfolio.html
+++ b/pages/fake/new-portfolio.html
@@ -56,7 +56,7 @@ permalink: /new-portfolio/
 
 			<!-- project information -->
 			<section class="portfolio-proj__metadata">
-				<h2 class="portfolio-meta__name">{{ project.site-name }}</h2>
+				<h2 class="portfolio-meta__name"><a href="{{ project.url }}">{{ project.site-name }}</a></h2>
 				<h4 class="portfolio-meta__sponsor">{{ project.sponsor }}, {{ project.date }}</h4>
 				<h4 class="portfolio-meta__note">// Click images to enlarge.</h4>
 			</section>
