Add styles for intake page

--- a/pages/fake/new-intake.html
+++ b/pages/fake/new-intake.html
@@ -6,9 +6,9 @@ permalink: /new-intake/
 
 <section class="intake__title">
 	<h1 class="intake-title__text">Project Intake Form</h1>
-	<div class="blog-title__line--long"></div>
-	<div class="blog-title__line--med"></div>
-	<div class="blog-title__line--short"></div>
+	<div class="intake-title__line--long"></div>
+	<div class="intake-title__line--med"></div>
+	<div class="intake-title__line--short"></div>
 </section>
 
 <section class="intake__text">
