Include new menu design on intake page to see how it looks

--- a/pages/fake/new-intake.html
+++ b/pages/fake/new-intake.html
@@ -4,6 +4,8 @@ layout: no-style-2
 permalink: /new-intake/
 ---
 
+{% include new-menu.html %}
+
 <section class="intake__title">
 	<h1 class="intake-title__text">Project Intake Form</h1>
 	<div class="intake-title__line--long"></div>
