Add footer to intake page to test visually

--- a/pages/fake/new-intake.html
+++ b/pages/fake/new-intake.html
@@ -21,3 +21,5 @@ permalink: /new-intake/
 <section class="intake__form">
 	<iframe class="intake__iframe" src="https://docs.google.com/forms/d/e/1FAIpQLSfLLtKFtWCYmRposqM3gGEMUcbz1Im86qz7_OZ-_5C53XQ1dA/viewform?embedded=true" width="640" height="1615" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </section>
+
+{% include new-footer.html %}
