Add new layout to all pages that have been styled thus far

--- a/pages/fake/new-about-1.html
+++ b/pages/fake/new-about-1.html
@@ -1,10 +1,8 @@
 ---
 title: New About
-layout: no-style-2
+layout: new-default
 permalink: /extra-new-about/
 ---
-
-<nav class="na__nav"></nav>
 
 <section class="na__title">
 	<h1 class="na-title__text">About</h1>
