--- a/pages/fake/new-home.html
+++ b/pages/fake/new-home.html
@@ -1,11 +1,8 @@
 ---
 title: Purple & Black Home
-layout: no-style-2
+layout: new-default
 permalink: /new-home/
 ---
-
-<!-- nav bar -->
-<nav class="nh__nav"></nav>
 
 <!-- first page of content -->
 <main class="nh__page1">
@@ -63,14 +60,3 @@ permalink: /new-home/
 	<div class="nh-p4__line--long"></div>
 	<div class="nh-p4__line--short"></div>
 </main>
-
-<!-- footer content -->
-<footer class="nh-footer">
-	<main class="nh-footer__content-wrapper">
-		<h3 class="nh-footer__link--name"><a href="{{ site.url }}">Katherine Donnally</a></h3>
-		<h3 class="nh-footer__link"><a href="{{ '/portfolio' | relative_url }}">Portfolio</a></h3>
-		<h3 class="nh-footer__link"><a href="{{ '/about' | relative_url }}">About</a></h3>
-		<h3 class="nh-footer__link"><a href="{{ '/intake' | relative_url }}">Intake</a></h3>
-		<h3 class="nh-footer__link"><a href="{{ '/blog' | relative_url }}">Blog</a></h3>
-	</main>
-</footer>
