--- a/pages/fake/new-intake.html
+++ b/pages/fake/new-intake.html
@@ -1,10 +1,8 @@
 ---
 title: New Intake
-layout: no-style-2
+layout: new-default
 permalink: /new-intake/
 ---
-
-{% include new-menu.html %}
 
 <section class="intake__title">
 	<h1 class="intake-title__text">Project Intake Form</h1>
@@ -21,5 +19,3 @@ permalink: /new-intake/
 <section class="intake__form">
 	<iframe class="intake__iframe" src="https://docs.google.com/forms/d/e/1FAIpQLSfLLtKFtWCYmRposqM3gGEMUcbz1Im86qz7_OZ-_5C53XQ1dA/viewform?embedded=true" width="640" height="1615" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </section>
-
-{% include new-footer.html %}
