Add changes to home: circle wording, circle styles, flow styles
- Didn't end up changing the order
- Haven't done anything with the sizing of fonts for smaller
  sizes yet

--- a/pages/fake/new-home.html
+++ b/pages/fake/new-home.html
@@ -9,21 +9,22 @@ permalink: /new-home/
 	<main class="nh-p1__content-wrapper">
 		<h1 class="nh-p1__name">Katherine Donnally</h1>
 		<h1 class="nh-p1__title">Web Designer</h1>
+		<h2 class="nh-p1__text">Based in Alexandria, Virginia.</h2>
 	</main>
 </main>
 
 <!-- second page of content -->
 <main class="nh__page2">
-	<h1 class="nh-p2__title">What suits your needs?</h1>
+	<h1 class="nh-p2__title">What best describes you?</h1>
 	<article class="nh-p2__options">
 		<section class="nh-options__option-1">
-			<h3 class="nh-options__text">Ground up<br/>(re)design</h3>
+			<h3 class="nh-options__text">I'm looking for<br/>a whole new<br/>website.</h3>
 		</section>
 		<section class="nh-options__option-2">
-			<h3 class="nh-options__text">Just a few<br/>tweaks, please</h3>
+			<h3 class="nh-options__text">I'm looking to<br/>spiff up my existing website.</h3>
 		</section>
 		<section class="nh-options__option-3">
-			<h3 class="nh-options__text">I'm not sure<br/>yet!</h3>
+			<h3 class="nh-options__text">I'm not sure!</h3>
 		</section>
 	</article>
 </main>
