Make some additional stylistic & wording tweaks

--- a/pages/fake/new-home.html
+++ b/pages/fake/new-home.html
@@ -15,7 +15,7 @@ permalink: /new-home/
 
 <!-- second page of content -->
 <main class="nh__page2">
-	<h1 class="nh-p2__title">What best describes you?</h1>
+	<h1 class="nh-p2__title">Which best describes you?</h1>
 	<article class="nh-p2__options">
 		<section class="nh-options__option-1">
 			<h3 class="nh-options__text">I'm looking for<br/>a whole new<br/>website.</h3>
@@ -24,7 +24,7 @@ permalink: /new-home/
 			<h3 class="nh-options__text">I'm looking to<br/>spiff up my existing website.</h3>
 		</section>
 		<section class="nh-options__option-3">
-			<h3 class="nh-options__text">I'm not sure!</h3>
+			<h3 class="nh-options__text">I'm not sure yet!</h3>
 		</section>
 	</article>
 </main>
