Add new wording to About page

--- a/pages/fake/new-about-1.html
+++ b/pages/fake/new-about-1.html
@@ -14,8 +14,8 @@ permalink: /extra-new-about/
 <section class="na__bio">
 	<h2 class="na-bio__title">Bio</h2>
 	<article class="na-bio__text">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p>Iaculis eu non diam phasellus vestibulum lorem. Neque gravida in fermentum et sollicitudin ac. Turpis nunc eget lorem dolor sed viverra. Interdum velit laoreet id donec ultrices tincidunt arcu non sodales. Tincidunt ornare massa eget egestas purus viverra accumsan in nisl. Lobortis scelerisque fermentum dui faucibus in. Egestas pretium aenean pharetra magna ac placerat. Elementum curabitur vitae nunc sed. Nunc lobortis mattis aliquam faucibus purus. Faucibus turpis in eu mi bibendum.</p>
+		<p>As a designer: Web designer and developer who values empathy in my work as much as code, seeks systemic solutions over quick fixes, and is committed to leveraging aesthetics to improve the human condition. Extremely proficient at HTML5, CSS3, JavaScript (ECMA 6+), Python 3, information architecture, bringing art to code, and a sense of justice fit for the 21st century.</p>
+		<p>As a human: background in Economics, American Studies, and costuming (it's been a wild ride); minor addiction to red lipstick and black-and-white clothes; grew up on a farm. I really care about making websites better, and will try my very best to do that with yours.</p>
 	</article>
 </section>
 
