Make changes to laptop-size portfolio: add full-role, change colors
- Role displays in black, change sponsor to gray
- Change font and color of modal to source sans white (vs Poppins
  anti-flash white)

--- a/pages/fake/new-portfolio.html
+++ b/pages/fake/new-portfolio.html
@@ -58,6 +58,7 @@ permalink: /new-portfolio/
 			<section class="portfolio-proj__metadata">
 				<h2 class="portfolio-meta__name"><a href="{{ project.url }}">{{ project.site-name }}</a></h2>
 				<h4 class="portfolio-meta__sponsor">{{ project.sponsor }}, {{ project.date }}</h4>
+				<h4 class="portfolio-meta__role">{{ project.full-role }}</h4>
 				<h4 class="portfolio-meta__note">// Click images to enlarge.</h4>
 			</section>
 		</section> <!-- end project -->
