--- a/pages/real/blog.html
+++ b/pages/real/blog.html
@@ -16,7 +16,7 @@ menu: false
 	{% for post in site.posts %}
 	<article class="blog-posts__post">
 		<h2 class="blog-post__title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
-		<h4 class="blog-post__meta">// Posted {{ post.date | date: "%b. %-d, %Y"}} // tags:
+		<h4 class="blog-post__meta">Posted {{ post.date | date: "%b. %-d, %Y"}} // tags:
 			<ul class="post-meta__tags">
 				{% for cat in post.categories %}
 				<li class="post-meta__tag">{{ cat }}</li>
@@ -28,7 +28,7 @@ menu: false
 				{{ post.excerpt | truncatewords: 35 }}
 			</div>
 			
-			<a class="post-read__more" href="{{ post.url }}">Read More</a>
+			<a class="post-read__more" href="{{ post.url }}">Read More >></a>
 		</section>
 	</article>
 	{% endfor %}
