Add non-Lorem text, change color, and style links on Intake
- Laptop size only

--- a/pages/fake/new-intake.html
+++ b/pages/fake/new-intake.html
@@ -12,8 +12,8 @@ permalink: /new-intake/
 </section>
 
 <section class="intake__text">
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque varius morbi enim nunc faucibus a pellentesque sit. Sagittis nisl rhoncus mattis rhoncus urna. Lorem mollis aliquam ut porttitor leo a diam sollicitudin. Tristique nulla aliquet enim tortor at auctor. Suspendisse potenti nullam ac tortor vitae. Aliquet nibh praesent tristique magna sit amet purus gravida quis.</p>
-	<p>Sodales neque sodales ut etiam sit amet. Cras tincidunt lobortis feugiat vivamus. Donec adipiscing tristique risus nec feugiat in fermentum posuere urna. Amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Velit ut tortor pretium viverra suspendisse potenti nullam ac tortor. At erat pellentesque adipiscing commodo elit at imperdiet. Vulputate enim nulla aliquet porttitor lacus luctus.</p>
+	<p>Welcome! This intake form will allow me to get a sense for your project, as well as some crucial information to prepare us for when we meet. As always, if you have any questions, don't hesitate to email me at <a href="mailto:kbdonnally@gmail.com">kbdonnally@gmail.com</a>.</p>
+	<p>The form itself is broken up into four parts: Contact Information, Project Logistics (budget, due dates, etc.), Project Information (what's the project about?), and Style Information (preferences on how things should look). It should take about 20 minutes to complete. If you'd prefer to do so in a new browser tab, you can do so by clicking <a href="https://docs.google.com/forms/d/e/1FAIpQLSfLLtKFtWCYmRposqM3gGEMUcbz1Im86qz7_OZ-_5C53XQ1dA/viewform?usp=sf_link" aria-label="Click here to open the form in a new tab">here</a>.</p>
 </section>
 
 <section class="intake__form">
