Add wrapper around homepage for JS purposes

--- a/pages/fake/new-home.html
+++ b/pages/fake/new-home.html
@@ -4,60 +4,62 @@ layout: new-default
 permalink: /new-home/
 ---
 
-<!-- first page of content -->
-<main class="nh__page1">
-	<main class="nh-p1__content-wrapper">
-		<h1 class="nh-p1__name">Katherine Donnally</h1>
-		<h1 class="nh-p1__title">Web Designer</h1>
-		<h2 class="nh-p1__text">Based in Alexandria, Virginia.</h2>
+<main class="new-home-wrapper">
+	<!-- first page of content -->
+	<main class="nh__page1">
+		<main class="nh-p1__content-wrapper">
+			<h1 class="nh-p1__name">Katherine Donnally</h1>
+			<h1 class="nh-p1__title">Web Designer</h1>
+			<h2 class="nh-p1__text">Based in Alexandria, Virginia.</h2>
+		</main>
 	</main>
-</main>
 
-<!-- second page of content -->
-<main class="nh__page2">
-	<h1 class="nh-p2__title">Which best describes you?</h1>
-	<article class="nh-p2__options">
-		<section class="nh-options__option-1">
-			<h3 class="nh-options__text">I'm looking for<br/>a whole new<br/>website.</h3>
-		</section>
-		<section class="nh-options__option-2">
-			<h3 class="nh-options__text">I'm looking to<br/>spiff up my existing website.</h3>
-		</section>
-		<section class="nh-options__option-3">
-			<h3 class="nh-options__text">I'm not sure yet!</h3>
-		</section>
-	</article>
-</main>
-
-<!-- third page of content -->
-<main class="nh__page3">
-	<main class="nh-p3__content-wrapper">
-		<h1 class="nh-p3__title">In that case,</h1>
-		<article class="nh-p3__text">
-			<p>You probably want to check out our <a href="{{ '/intake' | relative_url }}">intake form</a> to get started with your project.</p>
-			<p>Or, if you're not quite sure what you want out of the project, or would just prefer a more personalized experience:</p>
-			<p>Email Katherine at <a href="mailto:kbdonnally@gmail.com">kbdonnally@gmail.com</a> with a rough overview of your needs and we can set up a meeting. Use the subject line, "Your Name - Web Design" to ensure I see it and respond quickly!</p>
+	<!-- second page of content -->
+	<main class="nh__page2">
+		<h1 class="nh-p2__title">Which best describes you?</h1>
+		<article class="nh-p2__options">
+			<section class="nh-options__option-1">
+				<h3 class="nh-options__text">I'm looking for<br/>a whole new<br/>website.</h3>
+			</section>
+			<section class="nh-options__option-2">
+				<h3 class="nh-options__text">I'm looking to<br/>spiff up my existing website.</h3>
+			</section>
+			<section class="nh-options__option-3">
+				<h3 class="nh-options__text">I'm not sure yet!</h3>
+			</section>
 		</article>
 	</main>
-</main>
 
-<!-- fourth page of content -->
-<main class="nh__page4">
-	<div class="nh-p4__line--short"></div>
-	<div class="nh-p4__line--long"></div>
-	<h1 class="nh-p4__link"><a href="{{ '/portfolio' | relative_url }}">Portfolio</a></h1>
-	<div class="nh-p4__line--long"></div>
-	<div class="nh-p4__line--short"></div>
-	<div class="nh-p4__line--long"></div>
-	<h1 class="nh-p4__link"><a href="{{ '/about' | relative_url }}">About</a></h1>
-	<div class="nh-p4__line--long"></div>
-	<div class="nh-p4__line--short"></div>
-	<div class="nh-p4__line--long"></div>
-	<h1 class="nh-p4__link"><a href="{{ '/blog' | relative_url }}">Blog</a></h1>
-	<div class="nh-p4__line--long"></div>
-	<div class="nh-p4__line--short"></div>
-	<div class="nh-p4__line--long"></div>
-	<h1 class="nh-p4__link"><a href="{{ '/intake' | relative_url }}">Intake</a></h1>
-	<div class="nh-p4__line--long"></div>
-	<div class="nh-p4__line--short"></div>
+	<!-- third page of content -->
+	<main class="nh__page3">
+		<main class="nh-p3__content-wrapper">
+			<h1 class="nh-p3__title">In that case,</h1>
+			<article class="nh-p3__text">
+				<p>You probably want to check out our <a href="{{ '/intake' | relative_url }}">intake form</a> to get started with your project.</p>
+				<p>Or, if you're not quite sure what you want out of the project, or would just prefer a more personalized experience:</p>
+				<p>Email Katherine at <a href="mailto:kbdonnally@gmail.com">kbdonnally@gmail.com</a> with a rough overview of your needs and we can set up a meeting. Use the subject line, "Your Name - Web Design" to ensure I see it and respond quickly!</p>
+			</article>
+		</main>
+	</main>
+
+	<!-- fourth page of content -->
+	<main class="nh__page4">
+		<div class="nh-p4__line--short"></div>
+		<div class="nh-p4__line--long"></div>
+		<h1 class="nh-p4__link"><a href="{{ '/portfolio' | relative_url }}">Portfolio</a></h1>
+		<div class="nh-p4__line--long"></div>
+		<div class="nh-p4__line--short"></div>
+		<div class="nh-p4__line--long"></div>
+		<h1 class="nh-p4__link"><a href="{{ '/about' | relative_url }}">About</a></h1>
+		<div class="nh-p4__line--long"></div>
+		<div class="nh-p4__line--short"></div>
+		<div class="nh-p4__line--long"></div>
+		<h1 class="nh-p4__link"><a href="{{ '/blog' | relative_url }}">Blog</a></h1>
+		<div class="nh-p4__line--long"></div>
+		<div class="nh-p4__line--short"></div>
+		<div class="nh-p4__line--long"></div>
+		<h1 class="nh-p4__link"><a href="{{ '/intake' | relative_url }}">Intake</a></h1>
+		<div class="nh-p4__line--long"></div>
+		<div class="nh-p4__line--short"></div>
+	</main>
 </main>
