Add text for each home option & display on click!!!

--- a/pages/fake/new-home.html
+++ b/pages/fake/new-home.html
@@ -34,10 +34,17 @@ permalink: /new-home/
 	<main class="nh__page3">
 		<main class="nh-p3__content-wrapper">
 			<h1 class="nh-p3__title">In that case,</h1>
-			<article class="nh-p3__text">
-				<p>You probably want to check out our <a href="{{ '/intake' | relative_url }}">intake form</a> to get started with your project.</p>
-				<p>Or, if you're not quite sure what you want out of the project, or would just prefer a more personalized experience:</p>
-				<p>Email Katherine at <a href="mailto:kbdonnally@gmail.com">kbdonnally@gmail.com</a> with a rough overview of your needs and we can set up a meeting. Use the subject line, "Your Name - Web Design" to ensure I see it and respond quickly!</p>
+			<article class="nh-p3__text--1">
+				<p>Great! If you know the details about what you want your website to be like (e.g., your URL, the content you want in it, maybe some ideas about style) and your logistical guidelines (e.g., approximate budget, ideal finished-by date), you're ready to fill out the <a href="{{ '/intake' | relative_url }}">New Project Intake Form</a> to get started.</p>
+				<p>If you find that you're unsure about a lot of the questions being asked on the form&mdash;no problem. Instead, email me at <a href="mailto:kbdonnally@gmail.com">kbdonnally@gmail.com</a> with a rough overview of your needs, and we'll figure out what you want your website to be together.</p>
+			</article>
+			<article class="nh-p3__text--2 nh-p3__text--hide">
+				<p>Great! If you know the details about what you want the changes to your website to be like (e.g., pages you want changed, ideas on new style direction) and your logistical guidelines (e.g., approximate budget, ideal finished-by date), you're ready to fill out the <a href="{{ '/intake' | relative_url }}">New Project Intake Form</a> to get started.</p>
+				<p>If you find that you're unsure about a lot of the questions being asked on the form&mdash;no problem. Instead, email me at <a href="mailto:kbdonnally@gmail.com">kbdonnally@gmail.com</a> with a rough overview of your needs, and we'll figure out how you'd like to change your website together.</p>
+			</article>
+			<article class="nh-p3__text--3 nh-p3__text--hide">
+				<p>Not a problem at all! If you have a project in mind that you're thinking about, consider taking a look at the <a href="{{ '/intake' | relative_url }}">New Project Intake Form</a> to see if you feel comfortable answering the questions. If so, great! If not, don't hesitate to email me at <a href="mailto:kbdonnally@gmail.com">kbdonnally@gmail.com</a> with a general idea of your project, so that we can work out a plan of how to move forward together.</p>
+				<p>Otherwise, if you are just a wayward visitor from the World Wide Web, welcome! I invite you to check out my <a href="{{ '/portfolio' | relative_url }}">Portfolio</a> and my <a href="{{ '/blog' | relative_url }}">Blog</a>, and I hope you enjoy your time on this random designer's website.</p>
 			</article>
 		</main>
 	</main>
