Change which pages are marked real and fake to change menu list
- Add property of 'order' into menu display
- Move old files into 'fake' pages

--- a/pages/fake/portfolio.html
+++ b/pages/fake/portfolio.html
@@ -1,8 +1,7 @@
 ---
 title: Portfolio
 layout: no-style
-permalink: /portfolio/
-menu: true
+permalink: /old-portfolio/
 ---
 
 {% assign projects  = site.data.projects2 | sort: 'order' %}
