--- a/pages/real/new-about-1.html
+++ b/pages/real/new-about-1.html
@@ -1,7 +1,9 @@
 ---
-title: New About
+title: About
 layout: new-default
-permalink: /extra-new-about/
+permalink: /about/
+menu: true
+order: 2
 ---
 
 <section class="na__title">
