--- a/pages/real/new-intake.html
+++ b/pages/real/new-intake.html
@@ -1,7 +1,9 @@
 ---
-title: New Intake
+title: Intake
 layout: new-default
-permalink: /new-intake/
+permalink: /intake/
+menu: true
+order: 3
 ---
 
 <section class="intake__title">
