--- a/pages/real/new-portfolio.html
+++ b/pages/real/new-portfolio.html
@@ -1,7 +1,9 @@
 ---
-title: New Portfolio
+title: Portfolio
 layout: new-default
-permalink: /new-portfolio/
+permalink: /portfolio/
+menu: true
+order: 1
 ---
 
 <!-- variables -->
