Add remainder of home mobile styles

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ layout: new-default
 		<h1 class="nh-p2__title">Which best describes you?</h1>
 		<article class="nh-p2__options">
 			<section class="nh-options__option-1">
-				<h3 class="nh-options__text">I'm looking for<br/>a whole new<br/>website.</h3>
+				<h3 class="nh-options__text">I'm looking for<span><br/></span> a whole new<span><br/></span> website.</h3>
 			</section>
 			<section class="nh-options__option-2">
-				<h3 class="nh-options__text">I'm looking to<br/>spiff up my existing website.</h3>
+				<h3 class="nh-options__text">I'm looking to<span><br/></span> spiff up my existing website.</h3>
 			</section>
 			<section class="nh-options__option-3">
 				<h3 class="nh-options__text">I'm not sure yet!</h3>
