--- a/pages/real/blog.html
+++ b/pages/real/blog.html
@@ -17,7 +17,7 @@ order: 4
 	{% for post in site.posts %}
 	<article class="blog-posts__post">
 		<h2 class="blog-post__title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
-		<h4 class="blog-post__meta">Posted {{ post.date | date: "%b. %-d, %Y"}} // tags:
+		<h4 class="blog-post__meta">Posted {{ post.date | date: "%b. %-d, %Y"}} <span><br/></span>// tags:
 			<ul class="post-meta__tags">
 				{% for cat in post.categories %}
 				<li class="post-meta__tag">{{ cat }}</li>
