Add text wrapper for landing page

--- a/pages/new-home.html
+++ b/pages/new-home.html
@@ -8,8 +8,10 @@ layout: no-style-2
 	
 	<section class="home__page-1">
 		<div class="home-1__content-wrapper">
-			<h1 class="home-1__page-title"><span>Katherine Donnally</span></h1>
-			<h2 class="home-1__subtitle"><span>Leftist & Designer</span></h2>
+			<div class="home-1__text-wrapper">
+				<h1 class="home-1__page-title"><span>Katherine Donnally</span></h1>
+				<h2 class="home-1__subtitle"><span>Leftist & Designer</span></h2>
+			</div>
 		</div>
 	</section>
 
