Slightly change wording of subhed

--- a/pages/new-home.html
+++ b/pages/new-home.html
@@ -10,7 +10,7 @@ layout: no-style-2
 		<div class="home-1__content-wrapper">
 			<div class="home-1__text-wrapper">
 				<h1 class="home-1__page-title"><span>Katherine Donnally</span></h1>
-				<h2 class="home-1__subtitle"><span>Leftist & Designer</span></h2>
+				<h2 class="home-1__subtitle"><span>Designer & Ecosocialist</span></h2>
 			</div>
 		</div>
 	</section>
