Add in top menu; edit contents thereof

--- a/pages/new-home.html
+++ b/pages/new-home.html
@@ -4,6 +4,8 @@ permalink: /new-home/
 layout: no-style-2
 ---
 
+{% include new-menu.html %}
+
 <main class="home">
 	
 	<section class="home__page-1">
