Remove 'show in menu' option from Intake

--- a/pages/real/new-intake.html
+++ b/pages/real/new-intake.html
@@ -2,8 +2,8 @@
 title: Intake
 layout: new-default
 permalink: /intake/
-menu: true
-order: 3
+# menu: true
+# order: 3
 ---
 
 <section class="intake__title">
